--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <title>OceanData - Ocean Data Dashboard</title>
     <meta name="description" content="Advanced ocean data visualization and analysis platform with AI-powered insights" />
     <meta name="author" content="OceanData Analytics" />
-
     <meta property="og:title" content="OceanData - Ocean Data Dashboard" />
     <meta property="og:description" content="Advanced ocean data visualization and analysis platform with AI-powered insights" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="public/icon.png" />
   </head>
 
   <body>
